deleted sveltekit and some stuff

--- a/api/composer.json
+++ b/api/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "vlucas/phpdotenv": "^5.4"
+        "vlucas/phpdotenv": "^5.4",
+        "j0k3r/php-imgur-api-client": "^4.0"
     }
 }
