--- a/index/package.json
+++ b/index/package.json
@@ -14,8 +14,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
     "marked": "^4.0.12",
-    "nuxt": "^2.15.7",
-    "typewriter-effect": "^2.18.2"
+    "nuxt": "^2.15.7"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
@@ -28,6 +27,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
+    "nuxt-animejs": "^1.2.3",
     "postcss": "^8.4.8",
     "prettier": "^2.3.2",
     "tailwindcss": "^3.0.23"
