--- a/index/package.json
+++ b/index/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
+    "dayjs": "^1.11.0",
+    "dompurify": "^2.3.6",
+    "insane": "^2.6.2",
     "marked": "^4.0.12",
     "nuxt": "^2.15.7"
   },
