--- a/index/package.json
+++ b/index/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
     "nuxt-animejs": "^1.2.3",
+    "nuxt-windicss": "^2.2.8",
     "postcss": "^8.4.8",
     "prettier": "^2.3.2",
     "tailwindcss": "^3.0.23"
