--- a/index/package.json
+++ b/index/package.json
@@ -17,7 +17,8 @@
     "dompurify": "^2.3.6",
     "insane": "^2.6.2",
     "marked": "^4.0.12",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
