--- a/www/package.json
+++ b/www/package.json
@@ -16,6 +16,7 @@
     "tailwindcss": "^3.0.24"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "dayjs": "^1.11.0",
     "pug": "^3.0.2"
   }
